web/styles/right_sidebar.css
:root {
    /* Width of emoji used by user to display status. */
    --user-status-emoji-width: 24px;
}

/* Styling for Follow Button */
.user_sidebar_entry {
    display: flex;
    align-items: center;
    gap: 8px;
    margin-right: var(--width-simplebar-scroll-hover);

    &:not(.with_avatar) {
        padding-left: calc(var(--right-sidebar-toggle-width-offset) - 2px);
    }

    &:hover {
        cursor: pointer;
    }

    .selectable_sidebar_block {
        flex: 1;  
    }

    .user-name-and-status-emoji {
        display: flex;
        flex: 1;
    }

    .status-text {
        display: block;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
        opacity: 0.75;
        font-size: 90%;
    }

    & span.status-text:not(:empty) {
        margin-top: calc((var(--line-height-sidebar-row) / 4) * -1);
    }

    .unread_count {
        align-self: center;
        display: none;
    }

    .unread_count:not(.hide) {
        display: block;
        margin-left: 4px;
    }
}

.buddy-list-section li:hover .follow-user-btn {
    display: flex;
}

.follow-user-btn {
    border-radius: 999px;
    border: 2px solid var(--color-background-brand-solid-action-button);
    background-color: transparent;
    color: var(--color-background-brand-solid-action-button);
    padding: 4px 14px;
    white-space: nowrap;
    cursor: pointer;
    flex-shrink: 0;
    margin-left: auto;  /* Pushes to the right */
    font-size: 14px;
    display: none;
    align-items: center;
    gap: 4px;
    transition: all 0.1s ease;
}

.follow-user-btn.following {
    background-color: var(--color-background-brand-solid-action-button);
    border-color: var(--color-background-brand-solid-action-button);
    color: var(--color-text-brand-solid-action-button);
}

.follow-user-btn:hover {
    background-color: var(--color-background-brand-solid-action-button-hover);
    border-color: var(--color-background-brand-solid-action-button-hover);
    color: var(--color-text-brand-solid-action-button);
}

.follow-user-btn.following:hover {
    background-color: var(--color-background-brand-solid-action-button-hover);
    border-color: var(--color-background-brand-solid-action-button-hover);
}

.right-sidebar {
    & a:hover {
        text-decoration: none;
    }
}

.right-sidebar-items {
    padding-left: var(--right-sidebar-padding-left);
}

.right-sidebar-title {
    color: var(--color-text-sidebar-heading);
    opacity: var(--opacity-sidebar-heading);
    font-size: inherit;
    font-weight: var(--font-weight-sidebar-heading);
    letter-spacing: var(--letter-spacing-sidebar-heading);
}

#buddy_list_wrapper {
    position: relative;
    margin-left: 0;
    overflow: auto;
}

.buddy-list-section-toggle.zulip-icon-heading-triangle-right {
    transition:
        opacity 140ms linear,
        rotate 140ms linear;

    &.rotate-icon-down {
        rotate: 90deg;
    }

    &.rotate-icon-right {
        rotate: 0deg;
    }
}

.buddy-list-section-toggle {
    grid-area: arrow;
    justify-self: center;
    color: var(--color-text-sidebar-heading);
    opacity: var(--opacity-sidebar-heading-icon);
}

.buddy-list-section-container {
    /* This establishes better visual concord with
       the left sidebar's spacing between a last
       channel/topic and the header that follows. */
    margin-bottom: 3px;

    &.no-display {
        display: none;
    }
}

.buddy-list-section-container.collapsed {
    .buddy-list-section,
    .buddy-list-user-link {
        display: none;
    }
}

.buddy-list-section .user_sidebar_entry,
#userlist-header {
    .user-list-sidebar-menu-icon {
        justify-self: stretch;
        display: flex;
        align-items: center;
        justify-content: center;
        margin: 2px 2px 2px 1px;
        /* This helps horizontally align the vdots,
           given the reduced margin-left above.
           Vertical centering looks better with an
           extra pixel of top padding in this area,
           too. */
        padding: 1px 0 0 1px;
        border-radius: 3px;

        & .zulip-icon-more-vertical {
            /* 17px at 16px em */
            font-size: 1.0625em;
        }

        /*
        Hover does not work for touch-based devices like mobile phones.
        Hence the icons does not appear, making the user unaware of its
        presence on such devices. The following media property displays the
        icon by default for such behaviour.
        */

        @media (hover: none) {
            visibility: visible;
            /* Show dots on touchscreens in a less distracting,
               lighter shade. */
            color: var(--color-vdots-hint);
        }
    }

    &:hover {
        .user-list-sidebar-menu-icon {
            cursor: pointer;
            color: var(--color-vdots-visible);

            &:hover {
                color: var(--color-vdots-hover);
                background-color: var(--color-background-sidebar-action-hover);
            }
        }
    }
}
/* ... */

